# baseball-swing-analyzer

./: .gitignore  AGENTS.md  ARCHITECTURE_AUDIT.md  CLAUDE.md  DEBRIEF.md  README.md  plan.md  pyproject.toml  requirements.txt  skills-lock.json  test_ollama_vision.py
agents/: cv-engineer.md  metric-engineer.md  orchestrator.md  qa-harness.md  reality-check.md  swing-theorist.md  systems-plumber.md
docs/: SWING_RESEARCH_AND_COACHING_PLAN.md  metrics.md  repo-layout.md
docs/design/: SWING_VIEWER_REDESIGN.md
docs/notes/: DEBRIEF.md
docs/superpowers/plans/: 2026-04-25-executive-swing-summary.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
plans/: 01-implementation-plan.md  02-improvement-plan.md  03-phase5-6-web-3d.md  04-architecture-audit.md  05-web-design-plan.md  06-swing-detection-viewer-results-plan.md  07-swing-detection-breakdown-redesign-plan.md  08-final-swing-redesign-master-plan.md
results/real_1/: metrics.json
results/real_2/: metrics.json
scripts/: benchmark.py  benchmark_analysis.py  poll_job.py  test_cloud_vision.py
server/: db.py  main.py  requirements.txt
server/api/: artifacts.py  projection.py  results.py  status.py  upload.py
server/tasks/: analyze.py
src/baseball_swing_analyzer/: __init__.py  __main__.py  analysis_version.py  analyzer.py  benchmarks.py  detection.py  energy.py  export_3d.py  ingestion.py  lifter.py  metrics.py  object_cues.py  phases.py  pose.py  projection.py  reporter.py  session.py  sport.py  swing_events.py  swing_segments.py  swing_validation.py  visualizer.py
tests/: test_ai.py  test_analysis_version.py  test_analyzer.py  test_detection.py  test_export_3d.py  test_flags.py  test_ingestion.py  test_jobs_api.py  test_metrics.py  test_pose.py  test_projection.py  test_session.py  test_sport.py  test_swing_segments.py  test_swing_validation.py  test_visualizer.py
tests/fixtures/: generate_dummy.py  generate_synthetic.py  viewer_fixture.json
(+56 files in other folders)
