[project]
name = "baseball-swing-analyzer"
version = "0.1.0"
description = "Analyze baseball swings and extract key metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "ultralytics>=8.2.0",
    "rtmlib>=0.0.13",
    "filterpy>=1.4.5",
    "httpx",
    "scipy>=1.12.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_swing_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
